Changes since 1.0:

* Fix compilation error with newer gcc versions.
  [Ohad Lutzky <ohad lutzky.net>]

* Implement a random substitution feature; requires a requesttemplate,
  one or more substitution variables of the form ${varname) in the
  requesttemplate and a substitution file formatted with one value
  per newline delimited line (more than one variable per URL permitted).
  The variables and files are referred to as subst variables and subst
  files.  Each time the URL is sent the subst variable is replaced with
  one line randomly selected from the subst file.  Any part of the
  requesttemplate can be randomly substituted, protocol, host, port, etc.
  [Guy Ferraiolo <guyf cnet.com>]

* Add extraheader attribute to url's to allow custom headers to be set.
  [Justin Erenkrantz]

* Add payloadfile attribute to url's to allow the body to be read from a file.
  [Justin Erenkrantz]

* Support custom HTTP methods. [Justin Erenkrantz]

* Fix corruption when we have multiple usefarmer's without a count.
  [Justin Erenkrantz]

* Sync with latest find_apr.m4 and find_apu.m4 to detect 1.0 APR and APR-util.
  [Justin Erenkrantz]

* Add <proxyurl> child element to <urllist> to request against a proxy.
  [Justin Erenkrantz]

* Accept HTTP/1.0 responses to HTTP/1.1 requests.  [Justin Erenkrantz]

* Use APR's bundled mkdir script.  [Justin Erenkrantz]

* Support VPATH builds again.  [Justin Erenkrantz]

* Added the "content-type" parameter for URLs using the POST method.
  [Philippe Marzouk <phil@ozigo.org>]

* Remove .deps code that is just broken for now.  [Justin Erenkrantz]

* Added configversion attribute (root element <flood>) which ties config
  file structure with certain flood version and warns user if there is a
  conflict.  [Jacek Prucia]

* Added attribute responsescript (element <url>), which allows flood to
  delegate response processing to external script.  [Jacek Prucia]

* Change open_socket prototype to return errors.  [Justin Erenkrantz]
  