@@ -28,9 +28,18 @@
 extern apr_file_t *local_stdout;
 extern apr_file_t *local_stderr;
 
+struct relative_report_t {
+    config_t *config;
+};
+typedef struct relative_report_t relative_report_t;
+
 apr_status_t relative_times_report_init(report_t **report, config_t *config, 
                               const char *profile_name, apr_pool_t *pool)
 {
+    relative_report_t *rr = apr_palloc(pool, sizeof(relative_report_t));
+    rr->config = config;
+
+    *report = rr;
     return APR_SUCCESS;
 }
 
@@ -39,6 +48,7 @@ apr_status_t relative_times_process_stats(report_t *report, int verified, reques
 #define FLOOD_PRINT_BUF 256
     apr_size_t buflen;
     char buf[FLOOD_PRINT_BUF];
+    relative_report_t *rr = (relative_report_t*)report;
 
     buflen = apr_snprintf(buf, FLOOD_PRINT_BUF,
                           "%" APR_INT64_T_FMT " %" APR_INT64_T_FMT
@@ -61,9 +71,10 @@ apr_status_t relative_times_process_stats(report_t *report, int verified, reques
         apr_snprintf(buf+buflen, FLOOD_PRINT_BUF-buflen, " %d ", verified);
     }
 
-    /* FIXME: this call may need to be in a critical section */
 #if APR_HAS_THREADS
+    apr_thread_mutex_lock(rr->config->mutex);
     apr_file_printf(local_stdout, "%s %ld %s\n", buf, apr_os_thread_current(), req->uri);
+    apr_thread_mutex_unlock(rr->config->mutex);
 #else
     apr_file_printf(local_stdout, "%s %d %s\n", buf, getpid(), req->uri);
 #endif
